tests/compile_fail/borrow_mut/forward_generic.rs
#[derive(derive_more::BorrowMut)]
#[borrow_mut(forward)]
struct Foo<T>(T);

fn main() {}
