tests/compile_fail/borrow_mut/forward_generic.stderr
error: `#[borrow_mut(forward)]` cannot be used on a generic parameter field, an associated type projection involving generic parameters, or a forwarding pointer to one because the impl can overlap with `core`'s blanket `BorrowMut` implementation
 --> tests/compile_fail/borrow_mut/forward_generic.rs:3:15
  |
3 | struct Foo<T>(T);
  |               ^
